--- a/js_level1_scale/styles/scale.css
+++ b/js_level1_scale/styles/scale.css
@@ -1,21 +1,30 @@
-body, html {padding:0 10px; background-color:#f5f5f5;}
+body, html {padding:0 10px; /* background-color:#f5f5f5 */ background-color:wheat;}
 main {
     max-width:420px; min-width:320px; margin:30px auto 0;
-    background-color:skyblue;
+    background-color:#f5f5f5;
+    border-radius:10px;
     padding:20px;
-    text-align:center;
+    margin:0 auto;
 }
-main h1 {font-size:2rem; font-weight:700;}
-main p {font-size:1.125rem; font-weight:500; margin:10px 0 20px;}
-main .info {}
-main .info li {margin:15px;}
+main h1 {font-size:1.875rem; font-weight:500;}
+main p {font-size:1.125rem; font-weight:500; margin:12px 0 20px;}
+main .info {
+    background-color: chocolate;
+    padding:20px 10px;
+
+    border-radius:5px;}
+main .info li {}
 main .info li span {}
 main .info li input {}
 main #result_btn {
     background-color:greenyellow;
     padding:17px 30px;
-    border-radius:5px;
+    border-radius:10px;
     font-weight:500;
-    margin-top:10px;
+    margin-top:30px;
 }
-main p {}
+main #result {
+    background:url();
+}
+/* 자바스크립트에서 생성한 HTML 꾸미기 속성 */
+main #result em {color:#f00;}
