--- a/js_level1_scale/styles/scale.css
+++ b/js_level1_scale/styles/scale.css
@@ -4,24 +4,21 @@ main {
     background-color:#f5f5f5;
     border-radius:10px;
     padding:20px;
-    margin:0 auto;
+    margin-top:30px;
 }
 main h1 {font-size:1.875rem; font-weight:500;}
 main p {font-size:1.125rem; font-weight:500; margin:12px 0 20px;}
 main .info {
-    background-color: chocolate;
-    padding:20px 10px;
-
-    border-radius:5px;}
+    border-radius:5px;
+}
 main .info li {}
 main .info li span {}
 main .info li input {}
 main #result_btn {
     background-color:greenyellow;
-    padding:17px 30px;
     border-radius:10px;
     font-weight:500;
-    margin-top:30px;
+    padding:15px 23px;
 }
 main #result {
     background:url();
